<resources>
    <string name="app_name">Flight Controller</string>
    <string name="not_available">Not available</string>
    <string name="readings_title">Readings</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="malformedUrl">The server URL seems to be malformed</string>
    <string name="connectionFailed">Failed to connect to the server</string>
    <string name="azimuth">Azimuth</string>
    <string name="current">Current</string>
    <string name="difference">Difference</string>
    <string name="desired">Desired</string>
    <string name="elevation">Elevation</string>
    <string name="coordinates">Coordinates</string>
    <string name="you">You</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="last_updated">Last updated</string>
    <string name="never">Never</string>
    <string name="sensor_state">Sensor state</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="uav">UAV</string>
</resources>
