<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gnd.legokor.hu.flightcontroller.AntennaActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/readings_title"
            style="@style/heading"/>

        <LinearLayout style="@style/separatorLayout">

            <LinearLayout style="@style/detailsLayout">

                <TextView
                    android:text="@string/azimuth"
                    style="@style/subheading"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/current"/>

                <TextView
                    style="@style/detailTextPrimary"
                    android:id="@+id/currentAzimuth"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/difference"/>

                <TextView
                    style="@style/detailTextPrimary"
                    android:id="@+id/azimuthDifference"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/desired"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/desiredAzimuth"
                    android:text="@string/not_available"/>

            </LinearLayout>

            <LinearLayout style="@style/detailsLayout">

                <TextView
                    android:text="@string/elevation"
                    style="@style/subheading"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/current"/>

                <TextView
                    style="@style/detailTextPrimary"
                    android:id="@+id/currentElevation"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/difference"/>

                <TextView
                    style="@style/detailTextPrimary"
                    android:id="@+id/elevationDifference"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/desired"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/desiredElevation"
                    android:text="@string/not_available"/>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/divider"/>

        <TextView
            android:text="@string/coordinates"
            style="@style/heading"/>

        <LinearLayout style="@style/separatorLayout">

            <LinearLayout style="@style/detailsLayout">

                <TextView
                    android:text="@string/you"
                    style="@style/subheading"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/latitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/deviceLatitude"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/longitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/deviceLongitude"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/altitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/deviceAltitude"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/last_updated"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/deviceLocationUpdated"
                    android:text="@string/never"/>

            </LinearLayout>

            <LinearLayout style="@style/detailsLayout">

                <TextView
                    android:text="@string/uav"
                    style="@style/subheading"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/latitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/balloonLatitude"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/longitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/balloonLongitude"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/altitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/balloonAltitude"
                    android:text="@string/not_available"/>

                <TextView
                    style="@style/detailHeading"
                    android:text="@string/altitude"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/balloonLocationUpdated"
                    android:text="@string/never"/>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/divider"/>

        <TextView
            android:text="@string/sensor_state"
            style="@style/heading"/>

        <LinearLayout style="@style/separatorLayout">

            <LinearLayout style="@style/detailsLayout">

                <TextView
                    android:text="@string/accelerometer"
                    style="@style/subheading"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/accelerometerState"
                    android:text="@string/not_available"/>

            </LinearLayout>

            <LinearLayout style="@style/detailsLayout">

                <TextView
                    android:text="@string/magnetometer"
                    style="@style/subheading"/>

                <TextView
                    style="@style/detailText"
                    android:id="@+id/magnetometerState"
                    android:text="@string/not_available"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
